Closed Bug 1763654 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::dom::ToJSValue | mozilla::dom::PeerConnectionImpl_Binding::getStats_promiseWrapper]

Categories

(Core :: WebRTC: Signaling, defect)

Firefox 101
Unspecified
Windows 10
defect

Tracking

()

VERIFIED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 --- verified

People

(Reporter: calixte, Assigned: bwc)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/5fe807e2-918e-4fc4-adb2-368a30220406

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 4 frames of crashing thread:

0 xul.dll mozilla::dom::ToJSValue dom/bindings/ToJSValue.cpp:64
1 xul.dll mozilla::dom::PeerConnectionImpl_Binding::getStats_promiseWrapper dom/bindings/PeerConnectionImplBinding.cpp:398
2 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ConvertExceptionsToPromises> dom/bindings/BindingUtils.cpp:3270
3 None @0x000000cc9b8f18c9 

There are 10 crashes (from 9 installations) in nightly 101 starting with buildid 20220406093646. In looking at the pushlog for this build, it could be related to bug 1624989.

Flags: needinfo?(docfaraday)
Has Regression Range: --- → yes

I'm thinking that we're running into a situation where PeerConnectionImpl::GetStats returns a nullptr.

Flags: needinfo?(docfaraday)

Thanks! That will help tremendously.

Flags: needinfo?(docfaraday)
Assignee: nobody → docfaraday

FYI, Just got this again on whereby when in a meeting the other person reloaded their session and my tab crashed as a result. This was on a different system running Windows 11.

https://crash-stats.mozilla.org/report/index/5b5d8b2d-d4b8-4e54-ae2e-ddd7e0220407#tab-bugzilla

Not having any luck reproducing on OS X. Going to try windows next.

No luck reproducing on windows either, although I do not have access to a Windows 11 system currently. crash-stats has crashes from both 10 and 11, so it does not look specific to 11, so maybe that does not matter.

Here's a try run, which fixes one possibility for the crash, and that converts a couple of other possibilities into easier to diagnose crashes:

https://treeherder.mozilla.org/jobs?repo=try&revision=e674bf7b721539e6fb2d9c87c89205fdeac5ec72

Returning nullptr still release crashes, but is harder to tell what happened.

Try looks fine.

STR, in case you need them:

  1. Install the DevTools Media Panel extension.
  2. Visit https://www.tiktok.com/.
Has Regression Range: no → yes
Keywords: leave-open
Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1cbfaa700ba7 MOZ_CRASH instead of returning nullptr in here. r=mjf

I think bug 1764216 may be a duplicate. It has a test case and will have a Pernosco session shortly.

See Also: → 1764216

From the pernoso session mentioned in comment 13:

https://pernos.co/debug/MkUgoRBlnv1nH2GsGKnnKA/index.html#f{m[A/Ek,C3Oc_,t[ow,K+M_,f{e[A/Ek,C3OP_,s{aeHY3iVAA,bARk,uC9+z/Q,oC/3CKw___/

Looks like the nullptr was being returned due to the PC being closed. The patches landed here should solve that particular issue. I'll check back on crash-stats in a few days to see if the bug has been resolved.

Flags: needinfo?(docfaraday)

Byron, fwiw I can repro this by attempting to join a call on Zoom Web. 100% repro on my M1 Max here.

Does it happen with the patch from this bug? If so, what's the signature like?

Flags: needinfo?(docfaraday) → needinfo?(padenot)

(In reply to Byron Campen [:bwc] from comment #18)

Does it happen with the patch from this bug? If so, what's the signature like?

I think so it was recent enough but I'm not sure: https://crash-stats.mozilla.org/report/index/0142bd76-0160-4fc8-a3e9-11f1b0220413

Flags: needinfo?(padenot)

I can't repro now with a nightly I just updated though, but I don't know if I was lucky before, reproducing a couple times in a row.

So that's the build from the 11th, which was before this patch. If you have any time to pull down the latest nightly, and try, that would be useful. Otherwise, we can keep an eye on crash-stats and see if this signature, or any signatures from PeerConnectionImpl::GetStats, continue to show up.

Edit: Mid-air collision, it seems like it is fixed for you now.

ni self to check back on crash-stats, maybe on Friday.

Flags: needinfo?(docfaraday)

Not seeing any crashes that match on crash-stats, nor do I see any crashes in PeerConnectionImpl::GetStats. I think this is fixed.

Status: NEW → RESOLVED
Closed: 3 years ago
Flags: needinfo?(docfaraday)
Keywords: leave-open
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Flags: qe-verify+

I managed to reproduce the crash on a 2022-04-06 Nightly build on Win10, Ubuntu 20.04 and macOS 11. Verified as fixed on Nightly 102.0a1(20220516215740) and Firefox 101.0b7(20220515185854) on Win10, Ubuntu 20.04, macOS 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: