Bug 1763654: MOZ_CRASH instead of returning nullptr in here. r=mjf

Returning nullptr still release crashes, but is harder to tell what happened.

Differential Revision: https://phabricator.services.mozilla.com/D143230